# transcribe-and-translate

./: README.md
HTML-Demo/: Sintel.2010.720p_part_(de).vtt  Sintel.2010.720p_part_(en).vtt  index.html
install-deep-translator/: install-deep-translator.sh  install-python-scripts.sh  transcribe_translate.py  translate_audacity_files.py
install-deep-translator/scripts/: argos_list_lang.py  transcribe_translate.py  translate_argos.py  translate_audacity_files.py
install_audacity_openVINO/: build_audacity.sh
install_python_trans/: Argos_Languages.txt  Google_Whisper_Languages.txt  install-python-scripts.bat  install-python-scripts.sh  transcribe_translate-0.2.0-py3-none-any.whl
install_python_trans/GUI/Tools/: listBox_files.txt  transcribe_translate.xml
install_python_trans/Subtitle-Demo/: demo.bat  demo.sh
install_python_trans/build_python_bin/: build__python_bin.bat  build_python_bin.sh
install_python_trans/scripts/: build.sh  pyproject.toml  transcribe_translate.py  translate_audacity_files.py
install_python_trans/scripts/src/transcribe_translate/: transcribe_and_translate.py  transcribe_and_translate_cli.py  transcribe_translate_config.ini  translate_argos.py  translate_audacity_config.ini  translate_audacity_files.py
